<resources>
    <string name="app_name">BMI</string>
    <string name="kg">KG</string>
    <string name="meter">M</string>

    <string name="_70">0</string>
    <string name="calculate">Calculate</string>
    <string name="result">00</string>
    <string name="bmi_result_condition">BMI result condition</string>
    <string name="weight">WEIGHT</string>
    <string name="height">HEIGHT</string>
</resources>