<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#95D397"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">

   <androidx.cardview.widget.CardView

       android:id="@+id/cardView_1"
       android:layout_width="370dp"
       android:layout_height="150dp"
       android:layout_marginTop="20dp"
       android:layout_marginStart="12dp"
       android:layout_marginEnd="10dp"
       android:elevation="50dp"
       app:cardCornerRadius="15dp"
       app:cardBackgroundColor="#E45B89">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical">

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/weight"
               android:layout_marginStart="10dp"
               android:textSize="30sp"
               android:textStyle="bold"
               android:textColor="#3F51B5"/>


           <LinearLayout
               android:layout_width="382dp"
               android:layout_height="match_parent"
               android:orientation="horizontal"
               android:padding="10dp">

               <EditText
                   android:id="@+id/WeightEditId"
                   android:layout_width="180dp"
                   android:layout_height="wrap_content"
                   android:inputType="numberDecimal"
                   android:text="@string/_70"
                   android:textColor="#3F51B5"
                   android:textSize="50sp"
                   android:textStyle="bold" />

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:padding="10dp"
                   android:text="@string/kg"
                   android:textColor="#3F51B5"
                   android:textSize="30sp"
                   android:textStyle="bold" />

           </LinearLayout>

       </LinearLayout>




   </androidx.cardview.widget.CardView>



    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_2"
        android:layout_width="374dp"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="10dp"
        android:elevation="50dp"
        app:cardBackgroundColor="#03A9F4"
        app:cardCornerRadius="15dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height"
                android:layout_marginStart="10dp"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="#3F51B5"/>


            <LinearLayout
                android:layout_width="382dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="10dp">

                <EditText
                    android:id="@+id/HeightEditText"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:text="@string/_70"
                    android:textColor="#3F51B5"
                    android:textSize="50sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/meter"
                    android:textColor="#3F51B5"
                    android:textSize="30sp"
                    android:textStyle="bold" />

            </LinearLayout>


        </LinearLayout>




    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/buttonId"
        android:layout_width="350dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="#F4511E"
        android:textSize="30sp"
        android:textColor="#F4F6F2"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="@string/calculate" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_3"
        android:layout_width="374dp"
        android:layout_height="300dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="8dp"
        android:elevation="50dp"
        app:cardBackgroundColor="#719848"
        app:cardCornerRadius="15dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/resultTextId_1"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:textAlignment="center"
                android:padding="10dp"
                android:textColor="#6D1370"
                android:textSize="50sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/resultTextId_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="#F4F3F4"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>